:sparkles: :: 출석 조회시 결강자 같이 조회